debbuging bugs with arraylist method